--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,19 @@
 <label for="username">Username</label>
 <input type="text" name="username">
 <input type="submit" value="Submit Form">
-
+</form>
+<p>
+{% if breed %} 
+The breed you entered is {{breed}}
+Update it in the form below:
+{% else %}
+Please enter your breed:
+{% endif %}
+</p>
+<form action="" method="POST">
+{{form.hidden_tag()}}
+{{form.breed.label}}{{form.breed}}
+{{form.submit()}}
 
 </form>
 
