--- a/templates/index.html
+++ b/templates/index.html
@@ -15,20 +15,8 @@
 <input type="text" name="username">
 <input type="submit" value="Submit Form">
 </form>
-<p>
-{% if breed %} 
-The breed you entered is {{breed}}
-Update it in the form below:
-{% else %}
-Please enter your breed:
-{% endif %}
-</p>
-<form action="" method="POST">
-{{form.hidden_tag()}}
-{{form.breed.label}}{{form.breed}}
-{{form.submit()}}
-
-</form>
+<br>
+<p>If you don't see an event you're interested in. Let us know what type of events you're into <a href="{{url_for('get_form')}}">here.</a></p>
 
 </div>
 
