--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,39 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{url_for('index')}}">Home Page</a>
-     </nav>
+     </nav> -->
+<!--Trying a new nav bar-->
+<nav class="navbar navbar-expand-md navbar-light">
+    <a href="#" class="navbar-brand">
+        <h3 class="mb-0">Puppy Rock</h3>
+    </a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="{{url_for('index')}}" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{url_for('signup_form')}}" class="nav-link">Tickets</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{url_for('get_form')}}" class="nav-link">Feedback</a>
+            </li>
+            <li class="nav-item">
+                <a href="#{{url_for('thank_you')}}" class="nav-link" data-toggle="modal" data-target="#bookingModal">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
      {% block content %}
  
  
